# kl-expense

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
.github/workflows/: deploy.yml  lint.yml
kl_expense_app/: pyproject.toml
kl_expense_app/app/: __main__.py  cli.py  config.py  db_session.py  flask_app.py  logger.py  manage.py  models.py  routes.py  wsgi.py
kl_expense_app/src/: __main__.py  auth.py  cli.py  context.py  db.py  db_session.py  flask_app.py  manage.py  routes.py  wsgi.py
kl_expense_app/static/: style.css
kl_expense_app/templates/: insert.html
kl_expenses/: Dockerfile  lint.sh  pyproject.toml
kl_expenses/src/: auth.py  config.py  db.py  wsgi.py
kl_expenses/src/app/: context.py  create.py  models.py  routes.py
kl_expenses/src/cli/: argparser.py  manage.py  run.py
kl_expenses/src/db/: init.py  session.py
kl_expenses/templates/: login.html
