[project]
name = "kl-expense-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "gunicorn>=26.0.0",
    "loguru>=0.7.3",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ipython>=9.15.0",
    "ruff>=0.15.22",
]
